--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,5 +16,6 @@ jobs:
       with:
         go-version: '1.20'
     - run: go build -v main.go
+    - run: docker-compose build
     - run: docker-compose up -d
     - run: go test -v main_test.go
