--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,23 +7,30 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go_version: ['1.17', '1.18', '>=1.18']
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
       with:
-        go-version: '1.20'
+        go-version: ${{ matrix.go_version }}
     - run: docker-compose up -d
     - run: go test -v main_test.go
 
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go_version: ['1.17', '1.18', '>=1.18']
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     needs: test
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
       with:
-        go-version: '1.20'
+        go-version: ${{ matrix.go_version }}
     - run: go build -v main.go
