--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         go_version: ['1.17', '1.18', '>=1.18']
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-20.04, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
       fail-fast: false
       matrix:
         go_version: ['1.17', '1.18', '>=1.18']
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-20.04, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     needs: test
     steps:
