--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,12 @@ jobs:
         go_version: ['1.17', '1.18', '>=1.18']
         os: [ubuntu-20.04, ubuntu-latest]
     runs-on: ${{ matrix.os }}
+    env:
+      HOST: localhost
+      PORT: 5432
+      USER: root
+      PASSWORD: root
+      DBNAME: root
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
