--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,3 +42,7 @@ jobs:
       with:
         go-version: ${{ matrix.go_version }}
     - run: go build -v main.go
+
+  docker:
+    needs: build
+    uses: ./.github/workflows/Docker.yml
