--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   docker:
-    runs-on: ${{ubuntu-latest}}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: docker/setup-buildx-action@v2
