--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,3 +9,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: docker/setup-buildx-action@v2
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with:
+        username: rffontenelle
+        password: ${{ secrets.PASSWORD_DOCKER_HUB }}
