--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,5 +12,5 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v2.1.0
       with:
-        username: rffontenelle
-        password: ${{ secrets.PASSWORD_DOCKER_HUB }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
