--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,17 +31,19 @@ jobs:
   build:
     strategy:
       fail-fast: false
-      matrix:
-        go_version: ['1.17', '1.18', '>=1.18']
-        os: [ubuntu-20.04, ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs: test
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
       with:
-        go-version: ${{ matrix.go_version }}
+        go-version: 1.20
     - run: go build -v main.go
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: programa
+        path: main
 
   docker:
     needs: build
