--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,7 +37,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v3
       with:
-        go-version: 1.20
+        go-version: '1.20'
     - run: go build -v main.go
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
